Implement DEV mode indicator in the UI and update styles for better visibility. Modify .gitignore to exclude Salesforce CLI configuration directories. Adjust app.js to show the DEV mode indicator when active.

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,11 @@
     </script>
 </head>
 <body>
+    <!-- Indicador de modo DEV -->
+    <div id="devModeIndicator" class="dev-mode-indicator" style="display: none;">
+        <i class="fas fa-code"></i>
+        <span>DEV MODE</span>
+    </div>
     <!-- Pantalla 1: Selección de Orgs -->
     <div id="screen1" class="screen">
         <div class="container">
